--- a/examples/cardinal.ipynb
+++ b/examples/cardinal.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ceb4b12e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install benchbench --quiet"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e4dc652acc6a23c",
    "metadata": {
