--- a/examples/ordinal.ipynb
+++ b/examples/ordinal.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3ee1e0fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install benchbench --quiet"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6e8ec4c2b27d6326",
    "metadata": {
